fixed some sonarlint issues